--- a/index.html
+++ b/index.html
@@ -60,10 +60,21 @@
             <h2 class="about__title">About me:</h2>
             <div class="about__holder">
                 <div class="about__me">
-                    <p class="about__text">"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis
-                        incidunt
-                        iure ipsa deserunt quo! Corrupti sit in aperiam fugit nisi placeat excepturi totam corporis eum
-                        possimus, vitae ratione asperiores quod? "</p>
+                    <p class="about__text">
+                        Hi, my name is Patricia but people know me for Pachi. I am a self-taught web developer
+                        passionate about semantic HTML, creative CSS and practical JavaScript.
+                        I have an eye for user friendly design and I like my websites to jave clean code and look good.
+                    </p>
+                    <p class="about__text">
+                        As a Front-End my Stack of choice is pure HTML and CSS with Vanilla JavaScript, but I am
+                        learning React and Gatsby so I can create ever cooler things.
+
+                        I am active member of the #DEVcommunity online, and I write weekly blog posts about topics I am
+                        learning or experiences I had.
+                    </p>
+                    <p class="about__text">To learn more about my experience, check out my resume
+                        <a class="about__resume" href="resume.html" target="_blank">here</a>.
+                    </p>
                 </div>
 
                 <div class="about__topics">
@@ -121,7 +132,8 @@
                                 App</a>
                         </li>
                         <li class="project__item">
-                            <a class="project_repo" href="#" target="_blank">Repo</a>
+                            <a class="project_repo" href="https://github.com/pachicodes/be-happy-code"
+                                target="_blank">Repo</a>
                         </li>
                     </ul>
                     <img class="project__icon" src="assets/project/meow.png" alt="icon picturing a cat">
@@ -177,7 +189,7 @@
 
                 <li class="contact__item">
                     <a class="contact__link" href="https://twitter.com/pachicodes" target="_blank">
-                     <img class="contact__icon" src="/assets/contact/twitter.png">
+                        <img class="contact__icon" src="/assets/contact/twitter.png">
                     </a>
                 </li>
 
