alts and favicon

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Coiny&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+
+
     <title>Pachi's Page</title>
 </head>
 
@@ -60,21 +67,17 @@
             <h2 class="about__title">About me:</h2>
             <div class="about__holder">
                 <div class="about__me">
-                    <p class="about__text">
-                        Hi, my name is Patricia but people know me for Pachi. I am a self-taught web developer
-                        passionate about semantic HTML, creative CSS and practical JavaScript.
+                    <p class="about__text">Hi, my name is Patricia but people know me for Pachi. I am a self-taught web
+                        developer passionate about semantic HTML,
+                        creative CSS and practical JavaScript.
                         I have an eye for user friendly design and I like my websites to jave clean code and look good.
-                    </p>
-                    <p class="about__text">
-                        As a Front-End my Stack of choice is pure HTML and CSS with Vanilla JavaScript, but I am
-                        learning React and Gatsby so I can create ever cooler things.
 
-                        I am active member of the #DEVcommunity online, and I write weekly blog posts about topics I am
-                        learning or experiences I had.
-                    </p>
-                    <p class="about__text">To learn more about my experience, check out my resume
-                        <a class="about__resume" href="resume.html" target="_blank">here</a>.
-                    </p>
+                        As an active member of the #DEVcommunity online, I write tech posts about topics I am learning
+                        or experiences I had as
+                        well as code live sharing my pesonal projects and teaching what I know.
+                        <p class="about__text">To learn more about my experience, check out my resume
+                            <a class="about__resume" href="resume.html" target="_blank">here</a>.
+                        </p>
                 </div>
 
                 <div class="about__topics">
@@ -88,11 +91,11 @@
                     <h3 class="resume__sub">Interests:</h2>
                         <ul class="interests__list">
                             <li class="interest__item">
-                                <img class="interest__icon" src="/assets/code.png"><br /> Coding</li>
+                                <img class="interest__icon" src="/assets/code.png" alt="icon representing a laptop"><br /> Coding</li>
                             <li class="interest__item">
-                                <img class="interest__icon" src="/assets/write.png"><br /> Writting</li>
+                                <img class="interest__icon" src="/assets/write.png" alt="icon representing a Writting machine"><br /> Writting</li>
                             <li class="interest__item">
-                                <img class="interest__icon" src="/assets/stream.png"><br /> Streaming</li>
+                                <img class="interest__icon" src="/assets/stream.png" alt="icon representing a Streaming"><br /> Streaming</li>
                         </ul>
                         <p class="resume__text">"I love coding, so I don't only code for work, I also write blog
                             posts about
@@ -177,31 +180,31 @@
             <ul class="contact__list">
                 <li class="contact__item">
                     <a class="contact__link" href="https://github.com/pachicodes" target="_blank">
-                        <img class="contact__icon" src="/assets/contact/github.png">
+                        <img class="contact__icon" src="/assets/contact/github.png" alt="icon representing github">
                     </a>
                 </li>
 
                 <li class="contact__item">
                     <a class="contact__link" href="https://twitch.tv/pachicodes" target="_blank">
-                        <img class="contact__icon" src="/assets/contact/twitch.png">
+                        <img class="contact__icon" src="/assets/contact/twitch.png" alt="icon representing a twitch">
                     </a>
                 </li>
 
                 <li class="contact__item">
                     <a class="contact__link" href="https://twitter.com/pachicodes" target="_blank">
-                        <img class="contact__icon" src="/assets/contact/twitter.png">
+                        <img class="contact__icon" src="/assets/contact/twitter.png" alt="icon representing twitter">
                     </a>
                 </li>
 
                 <li class="contact__item">
                     <a class="contact__link" href="https://www.linkedin.com/in/pachicodes/" target="_blank">
-                        <img class="contact__icon" src="/assets/contact/linkedin.png">
+                        <img class="contact__icon" src="/assets/contact/linkedin.png" alt="icon representing a linkedin">
                     </a>
                 </li>
 
                 <li class="contact__item">
                     <a class="contact__link" href="mailto:pachicodes@gmail.com" target="_blank">
-                        <img class="contact__icon" src="/assets/contact/email.png">
+                        <img class="contact__icon" src="/assets/contact/email.png" alt="icon representing email">
                     </a>
                 </li>
             </ul>
