--- a/resume.html
+++ b/resume.html
@@ -96,9 +96,10 @@
             </ul>
         </div>
 
-        <div class="resume__skills a">
+        <div class="resume__skills">
             <h2 class="resume__sub">Skills:</h2>
-            <div class="skill__ball">
+
+            <div class="skill__ball a">
                 <p class="skill__text">HTML</p>
             </div>
             <div class="skill__ball b">
@@ -107,9 +108,11 @@
             <div class="skill__ball c">
                 <p class="skill__text">JavaScript</p>
             </div>
-            <div class="skill__ball d">
+            <div class="lesser d">
+                <p class="skill__text">React</p>
             </div>
-            <div class="skill__ball e">
+            <div class="lesser e">
+                <p class="skill__text">NodeJS</p>
             </div>
         </div>
     </section>
