--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Coiny&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/mobile.css" media="screen and (max-width: 500px)">
 
     <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
@@ -142,7 +143,7 @@
                     <img class="project__icon" src="assets/project/meow.png" alt="icon picturing a cat">
                 </div>
 
-                <div class="project">
+                <div class="project">                    
                     <h4 class="project__name">Ana Baby Care</h4>
                     <p class="project__description">This was my first paid job, an elegant website crated with HTML
                         &
@@ -160,6 +161,10 @@
                     <img class="project__icon" src="assets/project/baby.png" alt="icon picturing a baby">
                 </div>
             </div>
+
+            <button type="button" class="blog__btn github_btn">
+                <a class="blog__link" href="https://github.com/pachicodes" target="_blank">See more on Github</a>
+            </button>
         </div>
 
         <div class="main__blog">
@@ -181,30 +186,35 @@
                 <li class="contact__item">
                     <a class="contact__link" href="https://github.com/pachicodes" target="_blank">
                         <img class="contact__icon" src="/assets/contact/github.png" alt="icon representing github">
+                        <p class="contact__text">Github</p>
                     </a>
                 </li>
 
                 <li class="contact__item">
                     <a class="contact__link" href="https://twitch.tv/pachicodes" target="_blank">
                         <img class="contact__icon" src="/assets/contact/twitch.png" alt="icon representing a twitch">
+                        <p class="contact__text">Twitch</p>
                     </a>
                 </li>
 
                 <li class="contact__item">
                     <a class="contact__link" href="https://twitter.com/pachicodes" target="_blank">
                         <img class="contact__icon" src="/assets/contact/twitter.png" alt="icon representing twitter">
+                        <p class="contact__text">Twitter</p>
                     </a>
                 </li>
 
                 <li class="contact__item">
                     <a class="contact__link" href="https://www.linkedin.com/in/pachicodes/" target="_blank">
                         <img class="contact__icon" src="/assets/contact/linkedin.png" alt="icon representing a linkedin">
+                        <p class="contact__text">LinkedIn</p>
                     </a>
                 </li>
 
                 <li class="contact__item">
                     <a class="contact__link" href="mailto:pachicodes@gmail.com" target="_blank">
                         <img class="contact__icon" src="/assets/contact/email.png" alt="icon representing email">
+                        <p class="contact__text">Send Email</p>
                     </a>
                 </li>
             </ul>
