--- a/resume.html
+++ b/resume.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/resume.css">
+    <link rel="stylesheet" href="css/mobile.css" media="screen and (max-width: 500px)">
     <title>Pachi's Resume</title>
 </head>
 
@@ -21,10 +22,10 @@
                     <a href="/index.html">Back Home</a>
                 </li>
                 <li class="resume__nav-item">
-                    <a href="#">Print Resume</a>
+                    <a href="#" onclick="window.print();return false;" />Print Resume</a>
                 </li>
                 <li class="resume__nav-item">
-                    <a href="#">Download</a>
+                    <a href="resume.html" download>Download</a>
                 </li>
             </ul>
 
